--- a/references.bib
+++ b/references.bib
@@ -53,7 +53,8 @@
   number={2},
   pages={125--126},
   year={2013},
-  publisher={Wiley Online Library}
+  publisher={Wiley Online Library},
+  doi={10.1002/jrsm.1079}
 }
 
 @article{hedges1987hard,
@@ -598,6 +599,79 @@ url={https://pdg.lbl.gov/2011/listings/rpp2011-list-t-quark.pdf}
   doi={10.1086/379219}
 }
 
+@inproceedings{dorigo2015extraordinary,
+  title={Extraordinary claims: the 0.000029\% solution},
+  author={Dorigo, Tommaso},
+  booktitle={EPJ Web of Conferences},
+  volume={95},
+  pages={02003},
+  year={2015},
+  organization={EDP Sciences},
+  doi={10.1051/epjconf/20159502003}
+}
+
+@article{roos1975new,
+  author={Roos, M and Hietanen, M and Luoma, J},
+  title={A New Procedure for Averaging Particle Properties.},
+  journal={Physica Fennica},
+  volume={10},
+  number={1},
+  pages={21--33},
+  year={1975},
+  publisher={Finnish Physical Societies},
+}
+
+@article{jeng2007bandwagon,
+  title={Bandwagon effects and error bars in particle physics},
+  author={Jeng, Monwhea},
+  journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume={571},
+  number={3},
+  pages={704--708},
+  year={2007},
+  publisher={Elsevier},
+  doi={10.1016/j.nima.2006.11.024},
+}
+
+@preprint{bukhvostov1973statistical,
+    author = {Bukhvostov, A. P.},
+    title = {On the statistical meaning of experimental data},
+    journal = {CERN Trans. Int.},
+    number = {74-5},
+    year = {1973}
+}
+
+@preprint{bukhvostov1997probability,
+  title={On the probability distribution of the experimental results},
+  author={Bukhvostov, A. P.},
+  journal={arXiv preprint hep-ph/9705387},
+  year={1997}
+}
+
+@inproceedings{hanson2007lessons,
+  title={Lessons about likelihood functions from nuclear physics},
+  author={Hanson, Kenneth M},
+  booktitle={AIP Conference Proceedings},
+  volume={954},
+  number={1},
+  pages={458--467},
+  year={2007},
+  organization={American Institute of Physics},
+  doi={10.1063/1.2821298}
+}
+
+@article{shlyakhter1994improved,
+  title={An improved framework for uncertainty analysis: accounting for unsuspected errors},
+  author={Shlyakhter, Alexander I},
+  journal={Risk Analysis},
+  volume={14},
+  number={4},
+  pages={441--447},
+  year={1994},
+  publisher={Wiley Online Library},
+  doi={10.1111/j.1539-6924.1994.tb00262.x}
+}
+
 
 
 ###########################
@@ -796,7 +870,8 @@ url={https://pdg.lbl.gov/2011/listings/rpp2011-list-t-quark.pdf}
   number={3},
   pages={S34},
   year={2017},
-  publisher={IOP Publishing}
+  publisher={IOP Publishing},
+  doi={10.1088/1681-7575/aa6c0e}
 }
 
 ###########################
